--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PrimeBets - Zakłady Sportowe</title>
+    <title>PrimeBets - Zakłady Sportowe Online</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
         <h1>🎯 PrimeBets</h1>
-        <p>Strona w budowie. Wkrótce wielkie otwarcie!</p>
+        <p>Najlepsze zakłady sportowe online!</p>
+        <p class="soon">⏰ Wielkie otwarcie wkrótce...</p>
     </div>
     <script src="script.js"></script>
 </body>
