--- a/index.html
+++ b/index.html
@@ -1,4 +1,22 @@
-<!DOCTYPE html>
+/* Mobile Responsive */
+        @media (max-width: 768px) {
+            .hero h1 {
+                font-size: 2.5rem;
+            }
+            .hero-subtitle {
+                font-size: 1.2rem;
+            }
+            .hero-buttons {
+                flex-direction: column;
+                align-items: center;
+            }
+            .btn-primary, .btn-secondary {
+                width: 100%;
+                max-width: 300px;
+                padding-top: 1.2rem;
+                padding-bottom: 1.2rem;
+            }
+        }<!DOCTYPE html>
 <html lang="pl">
 <head>
     <meta charset="UTF-8">
@@ -468,13 +486,8 @@
             <a href="#" class="logo">
                 <img src="images/primebets.jpeg" alt="Logo PrimeBets">
             </a>
-            <ul class="nav-links">
-                <li><a href="#features">Korzyści</a></li>
-                <li><a href="#how-it-works">Jak to działa?</a></li>
-                <li><a href="#stats">Społeczność</a></li>
-            </ul>
-            <a href="#cta" class="nav-btn">Dołącz do Grupy</a>
-            <button class="mobile-menu" aria-label="Menu">☰</button>
+          
+           
         </div>
     </nav>
 
