Dodano komunikat prawny w stopce strony

--- a/index.html
+++ b/index.html
@@ -366,6 +366,18 @@
             border-top: 1px solid rgba(255, 255, 255, 0.1);
         }
 
+        .footer-disclaimer {
+            font-size: 0.7rem;
+            color: rgba(255, 255, 255, 0.4);
+            margin-top: 1.5rem;
+            padding-top: 1.5rem;
+            border-top: 1px solid rgba(255, 255, 255, 0.1);
+            line-height: 1.4;
+            max-width: 800px;
+            margin-left: auto;
+            margin-right: auto;
+        }
+
         /* Animations */
         @keyframes fadeInUp {
             from {
@@ -530,6 +542,9 @@
 
     <footer>
         <p>&copy; 2025 PrimeBets. Wszelkie prawa zastrzeżone. | Usługa analityczna przeznaczona dla osób pełnoletnich (18+).</p>
+        <div class="footer-disclaimer">
+            Wszelkie analizy, typy i rekomendacje publikowane w serwisie PrimeBets.pl mają charakter wyłącznie informacyjny i stanowią subiektywną opinię naszych analityków. Nie są one gwarancją zysku. Podkreślamy, że ostateczna decyzja o wykorzystaniu wytycznych wyłącznie do Ciebie i podejmujesz ją na własną odpowiedzialność. Poprzez dalsze korzystanie z serwisu w pełni akceptujesz te warunki.
+        </div>
     </footer>
 
     <script>
