Initial commit - PrimeBets landing page

--- a/index.html
+++ b/index.html
@@ -453,15 +453,28 @@
     </section>
 
     <section style="background: var(--dark); padding: 4rem 2rem; text-align: center;">
-        <div class="container">
-            <p style="color: rgba(255, 255, 255, 0.7); font-weight: 500; text-transform: uppercase; letter-spacing: 2px; font-size: 0.9rem; margin-bottom: 2.5rem;">
-                Współpraca, która przynosi korzyści
-            </p>
-            <div class="partners-logos">
-                <img src="images/bets.png" alt="Logotypy naszych partnerów" style="max-width: 100%; height: auto; border-radius: 15px; box-shadow: 0 10px 30px rgba(0,0,0,0.4);">
+            <div class="container">
+                <p style="color: rgba(255, 255, 255, 0.7); font-weight: 500; text-transform: uppercase; letter-spacing: 2px; font-size: 0.9rem; margin-bottom: 2.5rem;">
+                    Współpraca, która przynosi korzyści
+                </p>
+                <div class="partners-video" style="max-width: 400px; margin: 0 auto;">
+                    <video
+                        id="promoVideo"
+                        loop
+                        playsinline
+                        controls
+                        style="width: 100%; height: auto; border-radius: 15px; box-shadow: 0 10px 30px rgba(0,0,0,0.4); aspect-ratio: 9/16; object-fit: cover;"
+                    >
+                        <source src="images/bettign michal waw.mp4" type="video/mp4">
+                        Twoja przeglądarka nie obsługuje odtwarzania wideo.
+                    </video>
+                    <div style="margin-top: 1rem; display: flex; gap: 1rem; justify-content: center; align-items: center;">
+
+                      
+                    </div>
+                </div>
             </div>
-        </div>
-    </section>
+        </section>
 
     <section class="features" id="features">
         <div class="container">
