Compressed video to 1080p

--- a/index.html
+++ b/index.html
@@ -453,28 +453,32 @@
     </section>
 
     <section style="background: var(--dark); padding: 4rem 2rem; text-align: center;">
-            <div class="container">
-                <p style="color: rgba(255, 255, 255, 0.7); font-weight: 500; text-transform: uppercase; letter-spacing: 2px; font-size: 0.9rem; margin-bottom: 2.5rem;">
-                    Współpraca, która przynosi korzyści
-                </p>
-                <div class="partners-video" style="max-width: 400px; margin: 0 auto;">
-                    <video
-                        id="promoVideo"
-                        loop
-                        playsinline
-                        controls
-                        style="width: 100%; height: auto; border-radius: 15px; box-shadow: 0 10px 30px rgba(0,0,0,0.4); aspect-ratio: 9/16; object-fit: cover;"
-                    >
-                        <source src="images/bettign michal waw.mp4" type="video/mp4">
-                        Twoja przeglądarka nie obsługuje odtwarzania wideo.
-                    </video>
-                    <div style="margin-top: 1rem; display: flex; gap: 1rem; justify-content: center; align-items: center;">
-
-                      
-                    </div>
-                </div>
-            </div>
-        </section>
+          <div class="container">
+              <p style="color: rgba(255, 255, 255, 0.7); font-weight: 500; text-transform: uppercase; letter-spacing: 2px; font-size: 0.9rem; margin-bottom: 2.5rem;">
+                  Współpraca, która przynosi korzyści
+              </p>
+              <div class="partners-video" style="max-width: 400px; margin: 0 auto;">
+                  <video
+                      id="promoVideo"
+                      loop
+                      playsinline
+                      controls
+                      style="width: 100%; height: auto; border-radius: 15px; box-shadow: 0 10px 30px rgba(0,0,0,0.4); aspect-ratio: 9/16; object-fit: cover;"
+                  >
+                      <source src="images/Trim michal.mp4" type="video/mp4">
+                      Twoja przeglądarka nie obsługuje odtwarzania wideo.
+                  </video>
+                  <div style="margin-top: 1rem; display: flex; gap: 1rem; justify-content: center; align-items: center;">
+                      <button id="playPauseBtn" style="background: var(--primary); color: white; border: none; padding: 0.8rem 1.5rem; border-radius: 25px; cursor: pointer; font-weight: 600; transition: all 0.3s ease;">
+                          ▶️ Play
+                      </button>
+                      <button id="muteBtn" style="background: rgba(255,255,255,0.1); color: white; border: none; padding: 0.8rem 1.5rem; border-radius: 25px; cursor: pointer; font-weight: 600; transition: all 0.3s ease;">
+                          🔊 Dźwięk
+                      </button>
+                  </div>
+              </div>
+          </div>
+      </section>
 
     <section class="features" id="features">
         <div class="container">
