--- a/index.html
+++ b/index.html
@@ -484,8 +484,8 @@
                 </div>
                 <div class="feature-card animate-on-scroll">
                     <div class="feature-icon">📱</div>
-                    <h3>Dostęp mobilny 24/7</h3>
-                    <p>Pełen dostęp do panelu VIP w naszej apce. Twoje centrum dowodzenia w kieszeni.</p>
+                    <h3>Gra zawsze pod ręką.</h3>
+                    <p>Zero czekania. Wszystkie analizy i typy lądują prosto na Twój telefon. Jesteś w grze 24/7, gdziekolwiek jesteś.</p>
                 </div>
                 <div class="feature-card animate-on-scroll">
                     <div class="feature-icon">🎁</div>
