--- a/index.html
+++ b/index.html
@@ -473,28 +473,29 @@
       </div>
   </section>
 
-    <section class="features" id="features">
-        <div class="container">
-            <h2 class="section-title animate-on-scroll">Co zyskujesz w grupie VIP?</h2>
-            <div class="features-grid">
-                <div class="feature-card animate-on-scroll">
-                    <div class="feature-icon">⚡</div>
-                    <h3>Błyskawiczne analizy</h3>
-                    <p>Otrzymujesz gotowe prognozy prosto na swoje konto. Bez opóźnień, bez czekania.</p>
-                </div>
-                <div class="feature-card animate-on-scroll">
-                    <div class="feature-icon">📱</div>
-                    <h3>Gra zawsze pod ręką</h3>
-                    <p>Zero czekania. Wszystkie analizy i typy lądują prosto na Twój telefon. Jesteś w grze 24/7, gdziekolwiek jesteś.</p>
-                </div>
-                <div class="feature-card animate-on-scroll">
-                    <div class="feature-icon">🎁</div>
-                    <h3>Oferty partnerskie</h3>
-                    <p>Jako członek VIP masz dostęp do specjalnych pakietów i ofert u naszych zaufanych partnerów.</p>
-                </div>
+  <section class="features" id="features">
+    <div class="container">
+        <h2 class="section-title animate-on-scroll">Rozpocznij analizę rynku z nami</h2>
+        <p class="section-subtitle animate-on-scroll">W 3 prostych krokach zyskasz dostęp do wiedzy naszych ekspertów i AI.</p>
+        <div class="features-grid">
+            <div class="feature-card animate-on-scroll">
+                <div class="feature-icon">1️⃣</div>
+                <h3>KROK 1: Odbierz dostęp</h3>
+                <p>Kliknij przycisk "Odbieram darmowy dostęp" i dołącz do naszej zamkniętej grupy VIP na Telegramie. Rejestracja jest błyskawiczna i darmowa na start.</p>
+            </div>
+            <div class="feature-card animate-on-scroll">
+                <div class="feature-icon">2️⃣</div>
+                <h3>KROK 2: Otrzymuj gotowe analizy</h3>
+                <p>Codziennie nasz zespół, wspierany przez sztuczną inteligencję, przesyła do grupy od 1 do 5 starannie wyselekcjonowanych analiz. Otrzymasz je prosto na swój telefon.</p>
+            </div>
+            <div class="feature-card animate-on-scroll">
+                <div class="feature-icon">3️⃣</div>
+                <h3>KROK 3: Wykorzystaj informacje</h3>
+                <p>Otrzymujesz gotowy plan działania. Korzystaj z naszych prognoz i analiz, aby podejmować świadome decyzje. Jako członek VIP masz też dostęp do specjalnych ofert naszych partnerów.</p>
             </div>
         </div>
-    </section>
+    </div>
+</section>
 
     <section class="how-it-works" id="how-it-works">
         <div class="container">
