Remove step numbers from feature headings

--- a/index.html
+++ b/index.html
@@ -480,17 +480,17 @@
         <div class="features-grid">
             <div class="feature-card animate-on-scroll">
                 <div class="feature-icon">1️⃣</div>
-                <h3>KROK 1: Odbierz dostęp</h3>
+                <h3>Odbierz dostęp</h3>
                 <p>Kliknij przycisk "Odbieram darmowy dostęp" i dołącz do naszej zamkniętej grupy VIP na Telegramie. Rejestracja jest błyskawiczna i darmowa na start.</p>
             </div>
             <div class="feature-card animate-on-scroll">
                 <div class="feature-icon">2️⃣</div>
-                <h3>KROK 2: Otrzymuj gotowe analizy</h3>
+                <h3>Otrzymuj gotowe analizy</h3>
                 <p>Codziennie nasz zespół, wspierany przez sztuczną inteligencję, przesyła do grupy od 1 do 5 starannie wyselekcjonowanych analiz. Otrzymasz je prosto na swój telefon.</p>
             </div>
             <div class="feature-card animate-on-scroll">
                 <div class="feature-icon">3️⃣</div>
-                <h3>KROK 3: Wykorzystaj informacje</h3>
+                <h3>Wykorzystaj informacje</h3>
                 <p>Otrzymujesz gotowy plan działania. Korzystaj z naszych prognoz i analiz, aby podejmować świadome decyzje. Jako członek VIP masz też dostęp do specjalnych ofert naszych partnerów.</p>
             </div>
         </div>
