Revise 'how-it-works' section with new effectiveness data
Updated the 'how-it-works' section to reflect new content and statistics.

--- a/index.html
+++ b/index.html
@@ -506,29 +506,26 @@
     </div>
 </section>
 
-    <section class="how-it-works" id="how-it-works">
-        <div class="container">
-            <h2 class="section-title animate-on-scroll">Twoja przewaga w 3 krokach</h2>
-            <p class="section-subtitle animate-on-scroll">Oszczędzamy twój czas i maksymalizujemy twój potencjał, dostarczając gotowe, eksperckie analizy prosto na twoje konto.</p>
-            <div class="steps-grid">
-                <div class="step-card animate-on-scroll">
-                    <div class="step-number">1</div>
-                    <h3>Analiza AI i eksperci</h3>
-                    <p>Nasz elitarny zespół, wspierany przez AI, codziennie przetwarza tysiące danych, identyfikując sygnały, które inni przegapiają.</p>
-                </div>
-                <div class="step-card animate-on-scroll">
-                    <div class="step-number">2</div>
-                    <h3>Codzienne prognozy</h3>
-                    <p>Każdego dnia otrzymujesz do 5 starannie wyselekcjonowanych analiz z kluczowymi wnioskami i rekomendowanym działaniem.</p>
-                </div>
-                <div class="step-card animate-on-scroll">
-                    <div class="step-number">3</div>
-                    <h3>Gotowy plan działania</h3>
-                    <p>Dostajesz przejrzyste informacje, które możesz od razu wykorzystać u naszych partnerów. Prosto, szybko i skutecznie.</p>
-                </div>
-            </div>
+   <section class="how-it-works" id="how-it-works">
+    <div class="container">
+        <h2 class="section-title animate-on-scroll">Skuteczność potwierdzona wynikami</h2>
+        <p class="section-subtitle animate-on-scroll">
+            Nasze analizy osiągają <strong style="color: var(--primary); font-size: 1.3rem;">82% skuteczności</strong>, 
+            co przekłada się na realne korzyści dla naszych członków VIP.
+        </p>
+        
+        <div class="stats-section animate-on-scroll" style="max-width: 800px; margin: 2rem auto 0;">
+            <img 
+                src="images/stat.png" 
+                alt="Statystyki skuteczności analiz - 82%" 
+                style="width: 100%; height: auto; border-radius: 15px; box-shadow: 0 10px 40px rgba(255, 215, 0, 0.2);"
+            >
+            <p style="margin-top: 1.5rem; font-size: 0.9rem; color: rgba(255, 255, 255, 0.6); text-align: center;">
+                *Dane oparte na analizach z ostatnich 3 miesięcy
+            </p>
         </div>
-    </section>
+    </div>
+</section>
 
     <section class="stats" id="stats">
         <div class="container">
