--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@
     </div>
 </section>
 
-   <section class="how-it-works" id="how-it-works">
+  <section class="how-it-works" id="how-it-works">
     <div class="container">
         <h2 class="section-title animate-on-scroll">Skuteczność potwierdzona wynikami</h2>
         <p class="section-subtitle animate-on-scroll">
@@ -514,14 +514,14 @@
             co przekłada się na realne korzyści dla naszych członków VIP.
         </p>
         
-        <div class="stats-section animate-on-scroll" style="max-width: 800px; margin: 2rem auto 0;">
+        <div class="stats-section animate-on-scroll" style="max-width: 350px; margin: 2rem auto 0;">
             <img 
                 src="images/stat.png" 
                 alt="Statystyki skuteczności analiz - 82%" 
                 style="width: 100%; height: auto; border-radius: 15px; box-shadow: 0 10px 40px rgba(255, 215, 0, 0.2);"
             >
             <p style="margin-top: 1.5rem; font-size: 0.9rem; color: rgba(255, 255, 255, 0.6); text-align: center;">
-                *Dane oparte na analizach z ostatnich 3 miesięcy
+                *Dane oparte na analizach z ostatniego miesiąca
             </p>
         </div>
     </div>
