--- a/index.html
+++ b/index.html
@@ -452,12 +452,12 @@
         </div>
     </section>
 
- <section style="background: var(--dark); padding: 4rem 2rem; text-align: center;">
+<section style="background: var(--dark); padding: 4rem 2rem; text-align: center;">
     <div class="container">
         <p style="color: rgba(255, 255, 255, 0.7); font-weight: 500; text-transform: uppercase; letter-spacing: 2px; font-size: 0.9rem; margin-bottom: 2.5rem;">
             Współpraca, która przynosi korzyści
         </p>
-        <div style="display: flex; gap: 2rem; max-width: 900px; margin: 0 auto; align-items: center; flex-wrap: wrap; justify-content: center;">
+        <div style="display: flex; gap: 2rem; max-width: 1300px; margin: 0 auto; align-items: flex-start; flex-wrap: wrap; justify-content: center;">
             <div class="partners-video" style="flex: 1; min-width: 300px; max-width: 400px;">
                 <video
                     id="promoVideo"
@@ -475,7 +475,14 @@
                 <img 
                     src="images/opinia.jpg" 
                     alt="Opinia klienta" 
-                    style="width: 100%; height: auto; border-radius: 15px; box-shadow: 0 10px 30px rgba(0,0,0,0.4); object-fit: cover;"
+                    style="width: 100%; height: auto; border-radius: 15px; box-shadow: 0 10px 30px rgba(0,0,0,0.4); object-fit: cover; aspect-ratio: 9/16;"
+                >
+            </div>
+            <div class="partners-image" style="flex: 1; min-width: 300px; max-width: 400px;">
+                <img 
+                    src="images/opinia2.jpg" 
+                    alt="Opinia klienta 2" 
+                    style="width: 100%; height: auto; border-radius: 15px; box-shadow: 0 10px 30px rgba(0,0,0,0.4); object-fit: cover; aspect-ratio: 9/16;"
                 >
             </div>
         </div>
